src/test/run-pass/labeled-break.rs
// xfail-fast
// xfail-test

fn main() {
    loop foo: {
        loop {
            break foo;
        }
    }
}

