src/test/compile-fail/block-must-not-have-result-do.rs
// error-pattern:this block must not have a result

fn main() {
    do {
        true
    } while true;
}